--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-breakpoints": "^3.0.3",
     "react-dom": "^16.8.6",
+    "react-grid-layout": "^0.16.6",
     "react-image-lightbox": "^5.1.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.0.1",
