--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-transition-group": "^4.3.0",
     "styled-components": "^4.3.1"
   },
   "scripts": {
