--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.8.6",
     "react-grid-layout": "^0.16.6",
     "react-image-lightbox": "^5.1.0",
+    "react-lazyload-fadein": "^1.1.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
