--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.1",
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "static-site-generator-webpack-plugin": "^3.4.2"
   }
 }
